2016-05-01  Araki Ken  <arakiken@users.sf.net>

	* quartz/x_im_status_screen-cocoa.m: Added for input method plugin.

	* quartz/x_window.c: x_window_translate_coordinates() is implemented by using
	  window_get_position().

	* cocoa.[hm]:
	  - window_get_position() is added.
	  - NSShiftMask isn't ignored in insertText().
	  - x_display_t::width and x_display_t::height are set in viewDidMoveToWindow.

	* im_skk.c, im_wnn.c: dha dhi dhu dhe and dho are supported.

	* skk/dict.c: input_method option accepts whether skk dictionary or skk server
	  uses utf8 instead of eucjp.
	  (e.g. --im skk:localhost:utf8)

	* wnn/Makefile.in, canna/Makefile.in, skk/Makefile.in: TARGET_quartz is added.

	* configure.in: skk, wnn and canna are available on MacOSX/Cocoa.

	* configure.in, ml_char.c:
	  Fix https://github.com/saitoha/homebrew-sixel/pull/2
	  (Merge https://bitbucket.org/arakiken/mlterm/pull-requests/2/ml_charc-strip-the-dependency-of with some fixes.)

	* README, doc/ja/README.ja: Updated.

2016-04-28  Araki Ken  <arakiken@users.sf.net>

	* skk/dict.[ch], skk/mkf_str_parser.[ch]: Added.

	* im_skk.c: Many bugs are fixed.

2016-04-21  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c: ~/.skk-jisyo is loaded.

	* kik_conf_io.c: Regular files whose names begin with "." in the home directory
	  aren't checked if they should exit in ~/.config/ or not.

2016-04-18  Araki Ken  <arakiken@users.sf.net>

	* inputmethod/skk: Added.

	* im_wnn.c: Minor fixes.

	* x_im_status_screen.c: Incorrect redrawing on win32gdi is fixed.

	* configure.in: skk is enabled by default.

2016-04-10  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The change of 1611 commit is reverted.

	* ml_vt100_parser.c: 0.01 sec interval is used for the limit of reading bytes in
	  ml_parse_vt100_sequence() instead of MAX_READ_COUNT.

	* ml_line.c: Fix https://sourceforge.net/p/mlterm/mailman/message/34992704/.

	* man/mlterm.1: U+XXXX-XXXX in ~/.mlterm/*font is documented.
