@@ -1225,14 +1225,18 @@ AC_SUBST(WNN_LIBS)
 AC_ARG_ENABLE(skk,
 	[  --disable-skk           SKK @<:@default=enabled@:>@],
 	skk=$enable_skk)
-if test "$enable_shared" != "no" -a "$ml_cv_is_posix" != "no" ; then
+if test "$enable_shared" != "no" ; then
 	MAKE_DIRS="inputmethod/skk ${MAKE_DIRS}"
 	OUTPUT_FILES="inputmethod/skk/Makefile ${OUTPUT_FILES}"
 	if test "x$with_libltdl" != xno ; then
 		DL_LIBS_IM="-dlopen \$(top_builddir)/inputmethod/skk/libim-skk.la ${DL_LIBS_IM}"
 	fi
+	if test "$ml_cv_is_posix" = "no" ; then
+		SKK_LIBS="-lwsock32 -lws2_32"
+	fi
 	input_methods_result="$input_methods_result skk"
 fi
+AC_SUBST(SKK_LIBS)
 
 
 if test "x$input_methods_result" != x ; then
